# minilda

./: .gitignore  COPYING  Makefile.in  README  README.md  config.h.in  configure  configure.in  libtool
src/: Makefile.am  Makefile.in  feature.h  gibbs_sampler.cc  lda_infer.cc  lda_learn.cc  libminilda.cc  logging.h  minilda.h  pcomp.h  random.h  scoped_ptr.h  testharness.cc  timer.h
